...
	    Press <b>Finish</b> to start using the remote.
    ]]></string>

    <string name="wizard_zeroconf_no_host_address">Couldn\'t get this media center address!</string>
    <string name="wizard_zeroconf_cant_connect_no_host_address">Can\'t connect to this media center because i wasn\'t able to discover its address.</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="rewind">Rewind</string>

    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_mute">Mute</string>
    <string name="subtitles">Subtitles</string>
    <string name="audiostreams">Audiostreams</string>
    <string name="no_audiostream">No audiostream available</string>
...
    <string name="info">Info</string>
    <string name="codec_info">Codec</string>
    <string name="context">Context</string>
    <string name="osd">Menu</string>
    <string name="back">Back</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="test_connection">Test</string>
    <string name="search_again">Search again</string>

    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
...
